# monorepo

./: .gitignore  .pylintrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  black_check.sh  buildifier.check.sh  buildifier.sh  ktlint_check.sh  ktlint_format.sh  pylint.sh  python_lint.sh  setup_buildifier.sh  setup_ktlint.sh  setup_lint_venv.sh
.github/workflows/: ci.yml
java/: BUILD.bazel
java/src/main/java/com/example/: Calculator.java
java/src/test/java/com/example/: CalculatorTest.java
kotlin/: BUILD.bazel
kotlin/src/main/kotlin/com/example/: StringUtils.kt
kotlin/src/test/java/com/example/: TestRunner.java
kotlin/src/test/kotlin/com/example/: StringUtilsTest.kt  TestRunner.kt
python/: BUILD.bazel
python/src/example/: calculator.py  test_calculator.py
