load("@rules_java//java:defs.bzl", "java_library", "java_test")

java_library(
    name = "calculator",
    srcs = ["src/main/java/com/example/Calculator.java"],
    visibility = ["//visibility:public"],
)

java_test(
    name = "calculator_test",
    srcs = ["src/test/java/com/example/CalculatorTest.java"],
    args = ["--select-class=com.example.CalculatorTest"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    test_class = "com.example.CalculatorTest",
    use_testrunner = False,
    deps = [
        ":calculator",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_console",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
)
