load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "calculator",
    srcs = ["src/example/calculator.py"],
    imports = ["src"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "calculator_test",
    srcs = ["src/example/test_calculator.py"],
    imports = ["src"],
    main = "src/example/test_calculator.py",
    python_version = "PY3",
    deps = [
        ":calculator",
    ],
)
